--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li>
-                <h1><a href="/">Burak Mert</a></h1>
+                <h1><a href="/"><span class="fa-solid fa-code" aria-hidden="true"></span> Burak Mert</a></h1>
             </li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="about.html">About</a></li>
@@ -23,7 +23,7 @@
                     <span class="sr-only">LinkedIn</span></a></li>
             <li><a href="https://github.com/Bmecode" target="_blank"><span class="fa-brands fa-square-github"
                         aria-hidden="true"></span> <span class="sr-only">Github</span></a></li>
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="#resume" class="button">Resume</a></li>
         </ul>
     </nav>
     <section id="intro">
@@ -44,8 +44,23 @@
             I'm always interested in hearing about new teaching opportunities, writing curricula, or instructional
             design work.
         </p>
-        <p><a href="mailto:jen@example.com">Email me</a></p>
+        <p><a href="mailto:burakmert2697@gmail.com">Email me</a></p>
     </section>
+    <footer>
+        <h2>Burak Mert &middot; Developer</h2>
+        <ul>  
+           <li><a href="https://www.linkedin.com/in/bmecode/" target="_blank"> <span class="fa-brands fa-linkedin"
+                              aria-hidden="true"></span>
+                          <span class="sr-only">LinkedIn</span></a></li>
+                  <li><a href="https://github.com/Bmecode" target="_blank"><span class="fa-brands fa-square-github"
+                              aria-hidden="true"></span> <span class="sr-only">Github</span></a></li>
+           <li><a href="mailto:burakmert2697@gmail.com" target="_blank"> <span class="fa-solid fa-envelope"
+                              aria-hidden="true"></span>
+                          <span class="sr-only">Email</span></a></li>
+        </ul>
+      
+        <p><small>&copy; 2024 Burak Mert. All rights reserved.</small></p>
+      </footer>
 </body>
 
 </html>
