nav footer contact intro finish

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/07dea37be5.js" crossorigin="anonymous"></script>
 </head>
 
@@ -38,29 +38,33 @@
             Bootcamp
         </p>
     </section>
-    <section id="contact">
-        <h2>Contact me</h2>
-        <p>
-            I'm always interested in hearing about new teaching opportunities, writing curricula, or instructional
-            design work.
-        </p>
-        <p><a href="mailto:burakmert2697@gmail.com">Email me</a></p>
-    </section>
+    <div class="gradient"></div>
+    <div class="section-plum">
+        <section id="contact">
+            <h2>Contact me</h2>
+            <p>
+                I'm always interested in hearing about new teaching opportunities, writing curricula, or instructional
+                design work.
+            </p>
+            <p><a href="mailto:burakmert2697@gmail.com" class="button">Email me</a></p>
+        </section>
+    </div>
+    <div class="gradient"></div>
     <footer>
         <h2>Burak Mert &middot; Developer</h2>
-        <ul>  
-           <li><a href="https://www.linkedin.com/in/bmecode/" target="_blank"> <span class="fa-brands fa-linkedin"
-                              aria-hidden="true"></span>
-                          <span class="sr-only">LinkedIn</span></a></li>
-                  <li><a href="https://github.com/Bmecode" target="_blank"><span class="fa-brands fa-square-github"
-                              aria-hidden="true"></span> <span class="sr-only">Github</span></a></li>
-           <li><a href="mailto:burakmert2697@gmail.com" target="_blank"> <span class="fa-solid fa-envelope"
-                              aria-hidden="true"></span>
-                          <span class="sr-only">Email</span></a></li>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/bmecode/" target="_blank"> <span class="fa-brands fa-linkedin"
+                        aria-hidden="true"></span>
+                    <span class="sr-only">LinkedIn</span></a></li>
+            <li><a href="https://github.com/Bmecode" target="_blank"><span class="fa-brands fa-square-github"
+                        aria-hidden="true"></span> <span class="sr-only">Github</span></a></li>
+            <li><a href="mailto:burakmert2697@gmail.com" target="_blank"> <span class="fa-solid fa-envelope"
+                        aria-hidden="true"></span>
+                    <span class="sr-only">Email</span></a></li>
         </ul>
-      
+
         <p><small>&copy; 2024 Burak Mert. All rights reserved.</small></p>
-      </footer>
+    </footer>
 </body>
 
 </html>
