--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/07dea37be5.js" crossorigin="anonymous"></script>
 </head>
 
@@ -64,7 +64,7 @@
                         <li>SVG</li>
                     </ul>
                 </div>
-                <img src="/img/fem-gettingstartedcss-ch5-1.webp" alt="Screenshot of the Wall of Wonder." />
+                <img src="./img/fem-gettingstartedcss-ch5-1.webp" alt="Screenshot of the Wall of Wonder." />
             </article>
         </section>
     </div>
