--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li>
-                <h1><a href="/"><span class="fa-solid fa-code" aria-hidden="true"></span> Burak Mert</a></h1>
+                <h1><a href="./"><span class="fa-solid fa-code" aria-hidden="true"></span> Burak Mert</a></h1>
             </li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="./about.html">About</a></li>
