--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <h1><a href="./index.html"><span class="fa-solid fa-code" aria-hidden="true"></span> Burak Mert</a></h1>
             </li>
             <li><a href="./index.html#projects">Projects</a></li>
-            <li><a href="./">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./index.html#contact">Contact</a></li>
             <li><a href="https://www.linkedin.com/in/bmecode/" target="_blank"> <span class="fa-brands fa-linkedin"
                         aria-hidden="true"></span>
